--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -8,7 +8,7 @@
   --mainOrange: #f15025;
 }
 body {
-  font-family: "Caveat", cursive;
+  font-family: "Helvetica", cursive;
   color: black;
   background: white;
 }
